src/test/resources/typeSystemTestModels/valid/classes/ClassNotStatic.java
package typeSystemTestModels.valid.classes;

public class ClassNotStatic {

  public static class A {

  }
}
