src/test/resources/typeSystemTestModels/invalid/classes/ClassNotStatic.java
package typeSystemTestModels.invalid.classes;

public static class ClassNotStatic {

  public static class A {


  }
}